--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,7 +77,25 @@ p{
     text-align: center;
     text-decoration: none;
     padding: 50px 100px;
+    display:inline;
    
+
+}
+
+.shuffle__button{
+    border-radius: 10px;
+    border:none;
+    background-color: #2d003f;
+    color: white;
+    font-weight: 400;
+    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+    padding: 50px 100px;
+    
+    margin-top: 2rem;
+   
+
 
 }
 
