--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,20 @@ p {
   font-size: 14px;
   text-align: center;
   text-decoration: none;
-  padding: 50px 100px; }
+  padding: 50px 100px;
+  display: inline; }
+
+.shuffle__button {
+  border-radius: 10px;
+  border: none;
+  background-color: #2d003f;
+  color: white;
+  font-weight: 400;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: none;
+  padding: 50px 100px;
+  margin-top: 2rem; }
 
 .card-count {
   font-size: 2em;
